<resources>
    <string name="app_name">IAS Info</string>
    <string name="q1">What is IAS Exam?</string>
    <string name="a1">Indian Administrative Service (IAS) is the Civil Services Examination and one of the toughest competitive exams in India. It is conducted by the Union Public Service Commission for the recruitment of officers for the All India Administrative civil service.</string>
    <string name="q2">About IAS:</string>
    <string name="a2">The Indian Administrative Service is the premier administrative civil service of the Government of India. HIerarchy-wise, IAS is the highest administrative post among the 24 services like IPS, IFS etc. IAS is the permanent bureaucracy in India and forms a part of the executive branch. It is one of the three All India Services, its cadre can be employed by both the Union Government, the State Governments and public-sector undertakings.</string>
    <string name="q3">Being an IAS Officer:</string>
    <string name="a3">An IAS officer is given administrative command of an entire district as a District Collector.  IAS officers also represent Government of India at international level in bilateral and multilateral negotiations.</string>
    <string name="q4">Eligibility Criteria:</string>
    <string name="a4.1">1.Nationality:</string>
    <string name="a4.1.1">Candidate must be a citizen of India.
        \nCandidate must be a citizen of Nepal or a subject of Bhutan \nCandidate must be a Tibetan Refugee who came to India before 1st January 1962 to be settled permanently in India \nCandidate must be person of Indian Origin who has migrated from Ethiopia, Kenya, Malawi, Myanmar, Pakistan, Sri Lanka, Tanzania, Uganda, Vietnam, Zaire, or Zambia with an intention of permanently settling in India</string>
    <string name="a4.2">2.Educational Qualification:</string>
    <string name="a4.2.1">Candidate applying for civil service exams is required to fulfill the following criteria: \nCandidate must hold a Bachelors Degree from any of the recognised universities Candidates who have appeared for the qualifying examination and are awaiting results or those who are yet to appear for the qualifying examination are also eligible for the Preliminary Examination. Such candidates have to produce proof of passing the said examination along with the application for the Main Examination. \nCandidates with professional and technical qualifications recognised by the Government or its equivalent are also elgible to apply \nCandidates who have passed the final year of MBBS or any Medical Examination but are yet to complete the internship can also appear for the Main Examination. However, they must submit a certificate from the concerned University that they have passed the final professional medical examination.</string>
    <string name="a4.3">3.Age Limit:</string>
    <string name="a4.3.1">A candidate should be minimum 21 years and maximum 32 years old as on  August 01, 2017. \nThe upper age limit prescribed above is relaxable for the following candidates: 5 years - Scheduled Caste/ Scheduled Tribe (SC/ST) 3 years - Other Backward Classes (OBC) 5 years - if a candidate had ordinarily been domiciled in the State of Jammu and Kashmir during the period from the 1st January, 1980 to the 31st December, 1989. 3 years - Defence Services personnel 5 years - ex-servicemen including Commissioned Officers and ECOs/SSCOs who have rendered at least 5 years Military Service as on 1st August, 2017 5 years in the case of ECOs/SSCOs 10 years - Blind, deaf-mute and orthopedically handicapped persons</string>
    <string name="a4.4">4.Number of Attempts:</string>
    <string name="a4.4.1">Restriction on the maximum number of attempts is effective since 1984: For General Candidates: 6 attempts. Scheduled Caste and Scheduled Tribe Candidates (SC/ST): No Limits. Other Backward Classes (OBC): 9 attempts.</string>
    <string name="a5">UPSC Syllabus:</string>
    <string name="a5.1">The Union Public Service Commission (UPSC) Civil Services Exam Syllabus is divided into three categories, namely Preliminary, Mains and Interview. The Preliminary syllabus is mainly designed to assess a candidates comprehension of current affairs and aptitude within the stipulated time. The preliminary paper is a compulsory and qualifying paper.</string>
    <string name="a5.2">The Mains syllabus is basically designed to judge a candidates academic expertise in his/her specialised subject. The syllabus also focuses on testing aspirants ability to present knowledge in a clear and coherent manner. The main examination has 9 papers and the syllabus is designed according to the subjects specified. The Preliminary and Mains syllabus is designed for written test. Candidates, who emerge successful in the Preliminary and Main examination, can appear for the interview.</string>
    <string name="a6">UPSC Preparation Tips</string>
    <string name="a6.1">The Civil Services examination conducted by the UPSC is one of the toughest All India examinations in the country. The exam is conducted in 3 stages - the prelims, main and the interview. The following tips will help you in preparing yourself to face the Civil Services examination with confidence: Prepare a suitable time-table: Analyse your status long before the examination and plan your schedule accordingly. When it comes to civil services exams, last minute preparations never work. Since the civil services exams take place every year, there is always a plenty of time to plan how many days you would want to allot for certain subjects.   Remember, slow and steady always wins the race. So early preparations always help than mugging up when the exams are just a month away.   Study and revision should be part of your syllabus: The vast syllabus of civil service examination can leave anybody in confusion. Hence, you need to plan your studies for a day and for a week. You should plan your study method in such a way that you should be able to read and revise the prescribed subjects as many times as possible or till you feel confident about your preparation. Focus on basic concepts: Since those who aspire to help in nation building through civil services need to know what exactly it takes to pass these exams, they should be well aware of the country and significant developments. Thorough knowledge about your countrys culture, society and language is an inevitable requirement to be well prepared for the exams. So the preparation does not mean you should be a book-worm but an aspirant with the practical knowledge of his surroundings.   Make notes: As you go through the syllabus, make quick notes. This will help you in revision and better understanding of concerned topics. Coaching classes are not compulsory: One very simple fact that every civil services aspirant should know is that if one is not mentally prepared and determined enough to understand a subject to the core, one cannot succeed even by attending coaching classes. Those who believe that only coaching classes can help them with useful tips for preparation can join. However, it is always better to study each and every subject in detail with proper understanding instead of preparing for names sake.   Keep yourself updated with current affairs: Civil services exams are there to test an aspirants in-depth knowledge about the society he/she is lives in. It is a common myth among the candidates that they should be well aware of what is happening at the international level. Knowledge about international events is also required, but knowing ones own village, district, state and country should be considered as the foundation for ones preparation. This does help in serving ones country very well.   Reading newspapers: The moment one fills up the form for civil services exams, one is advised to read newspapers regularly. Reading English newspapers is advised with a lot of emphasis. However, it is quite important for the civil services exams aspirants to read English as well as other regional language newspapers. The idea here is to be well informed rather than acquiring limited knowledge. One newspaper may provide a news with limited information whereas the same news may be given with a lot of details in another. So be hungry for more than one newspaper to be well informed. Practice previous years question papers: Solving previous years question papers is important. It is advised to study at least 5 years solved question papers. This kind of activity gives you an idea about the structure of the questions papers and what kind of questions can be asked in the coming exams. Solving question papers of previous years or at least glancing at them may appear a tedious task, but it is a pain worth undergoing. It does boost your confidence and give you a clear picture of what exactly you are going to see in the question papers of upcoming exams. Many civil services related sites have useful question banks at your disposal. So go ahead and utilize them to the fullest and you will experience the leap your personality takes from being blank to being focused and confident.   Focus on your personality and communication skills: Interview is one of the most important parts of the examination. It is vital for you to convey your thoughts clearly to the interviewers. Hence, concentrate on polishing your communication skills and body language. Some candidates are blessed with such skills. And some need to practice to become excellent communicators of their ideas. Candidates with no communication skills can approach those, who have already appeared for the civil services exams, to take useful tips from them. Be honest to yourself: The interview part of the civil services exams is not designed to judge ones expertise on a subject. However, a candidate has to speak from the heart or answer all the questions with honesty. There is a common misunderstanding among the candidates that if they speak lies about their hobbies just to get through the interview, it will never help them. The interviewers are there not just to ask questions but also to evaluate a candidates personality and ability to have a clear understanding that a no is a no it cannot be replaced with a yes and vice versa. So you have to be yourself, and must face the exam and interview honestly.</string>
    <string name="a7">Civil Service Coaching Centres</string>
</resources>